Name:          exference-core
Version:       0.13.0.0
Cabal-Version: >= 1.8
Build-Type:    Simple

Library
  --ghc-options: -fllvm
  ghc-options: -threaded
               -auto-all -caf-all -fno-spec-constr
               -rtsopts
               -O1
               -j
               -Wall
               -fno-warn-unused-imports
               -fno-warn-orphans
  exposed-modules: Language.Haskell.ExferenceCore
                   Language.Haskell.Exference.Type
                   Language.Haskell.Exference.ConstrainedType
                   Language.Haskell.Exference.TypeClasses
                   Language.Haskell.Exference.ExferenceStats
                   Language.Haskell.Exference.Expression
                   Language.Haskell.Exference.FunctionBinding
                   Language.Haskell.Exference.SearchTree
                   Paths_exference_core
  other-modules: Language.Haskell.Exference.Internal.Unify,
                 Language.Haskell.Exference.Internal.ConstraintSolver,
                 Language.Haskell.Exference.Internal.ExferenceNode,
                 Language.Haskell.Exference.Internal.Exference
  extensions: NoMonomorphismRestriction
  hs-source-dirs: src
  Build-Depends:
    base >=3 && <5,
    containers,
    pretty >= 1.1,
    deepseq-generics,
    vector,
    mtl,
    hood,
    stable-memo,
    unordered-containers >= 0.2.5 && < 0.3,
    hashable,
    parsec,
    pqueue,
    list-t >= 0.2.3 && < 0.3,
    mmorph >= 1.0.4 && < 1.1
