Name:          exference
Version:       0.11.2.1
Cabal-Version: >= 1.8
Build-Type:    Simple

data-files:
  environment/all.ratings
  environment/Applicative.hs
  environment/Arrow.hs
  environment/Bits.hs
  environment/Bool.hs
  environment/Category.hs
  environment/Char.hs
  environment/Comonad.hs
  environment/Complex.hs
  environment/Cont.hs
  environment/ControlMonadTransClass.hs
  environment/ControlMonadIOClass.hs
  environment/Data.hs
  environment/Either.hs
  environment/EitherT.hs
  environment/Eq.hs
  environment/Foldable.hs
  environment/Functor.hs
  environment/Generics.hs
  environment/Int.hs
  environment/Ix.hs
  environment/List.hs
  environment/Map.hs
  environment/Maybe.hs
  environment/Monad.hs
  environment/Monoid.hs
  environment/Ord.hs
  environment/Prelude.hs
  environment/Printf.hs
  environment/Proxy.hs
  environment/Ratio.hs
  environment/Read.hs
  environment/Show.hs
  environment/State.hs
  environment/Storable.hs
  environment/String.hs
  environment/SystemIO.hs
  environment/Traversable.hs
  environment/Typeable.hs
  environment/Void.hs
  environment/Word.hs



flag build-executables
  description: build the executables, not just the library
  default: False

Library
  --ghc-options: -fllvm
  ghc-options: -threaded
               -auto-all -caf-all -fno-spec-constr
               -rtsopts
               -O2
               -j
               -fno-warn-unused-imports
               -fno-warn-orphans
  exposed-modules: Language.Haskell.Exference
                   Language.Haskell.Exference.SimpleDict
                   Language.Haskell.Exference.ExpressionToHaskellSrc
                   Language.Haskell.Exference.TypeFromHaskellSrc
                   Language.Haskell.Exference.BindingsFromHaskellSrc
                   Language.Haskell.Exference.ClassEnvFromHaskellSrc
                   Language.Haskell.Exference.EnvironmentParser
                   Language.Haskell.Exference.FunctionDecl
                   Paths_exference
  extensions: NoMonomorphismRestriction
  hs-source-dirs: src
  Build-Depends:
    exference-core ==1.1.2.1,
    base >=3 && <5,
    containers,
    transformers,
    mtl,
    either,
    haskell-src-exts,
    deepseq,
    hood,
    process,
    parsec,
    list-t,
    directory


Executable test-main
  if flag(build-executables) {
    buildable: True
    build-depends:
      exference-core,
      base >=3 && <5,
      containers,
      transformers,
      mtl,
      either,
      haskell-src-exts,
      deepseq,
      hood,
      process,
      parsec,
      list-t,
      directory
      -- data-pprint >= 0.2.4
  } else {
    buildable: False
  }
  main-is: Main.hs
  hs-source-dirs: src
  ghc-options: -auto-all -caf-all -fno-spec-constr
               -rtsopts
               -O2
               -j
               -Wall
               -Werror
               -fno-warn-unused-imports
               -fno-warn-orphans
               -threaded
               -with-rtsopts "-H2G -M4G -N"
  extensions: NoMonomorphismRestriction
