Name:          exference
Version:       1.3.0.0
Cabal-Version: >= 1.8
Build-Type:    Simple

data-files:
  environment/all.ratings
  environment/Applicative.hs
  environment/Arrow.hs
  environment/Bits.hs
  environment/Bool.hs
  environment/Category.hs
  environment/Char.hs
  environment/Comonad.hs
  environment/Complex.hs
  environment/Cont.hs
  environment/ControlMonadTransClass.hs
  environment/ControlMonadIOClass.hs
  environment/Data.hs
  environment/Either.hs
  environment/EitherT.hs
  environment/Eq.hs
  environment/Foldable.hs
  environment/Functor.hs
  environment/Generics.hs
  environment/Int.hs
  environment/Ix.hs
  environment/List.hs
  environment/Map.hs
  environment/Maybe.hs
  environment/Monad.hs
  environment/Monoid.hs
  environment/Ord.hs
  environment/Prelude.hs
  environment/Printf.hs
  environment/Proxy.hs
  environment/Ratio.hs
  environment/Read.hs
  environment/Show.hs
  environment/State.hs
  environment/Storable.hs
  environment/String.hs
  environment/SystemIO.hs
  environment/Traversable.hs
  environment/Typeable.hs
  environment/Void.hs
  environment/Word.hs



flag build-executables
  description: build the executables, not just the library
  default: True

Flag linkNodes
  description: nodes keep a reference to the precessor node, allowing returning
               the path thad lead to a solution.
  default: False

Flag buildSearchTree
  description: use dirty hacks to create the search tree that can be observed
               afterwards. needs link-nodes flag.
  default: False

Library
  --ghc-options: -fllvm
  ghc-options: -rtsopts
               -O2
               -j
               -Wall
               -fno-warn-unused-imports
               -fno-warn-orphans
               -fno-spec-constr
               -auto-all
               -caf-all
  If flag(linkNodes) || flag(buildSearchTree)
    cpp-options: -DLINK_NODES
  If flag(buildSearchTree)
    cpp-options: -DBUILD_SEARCH_TREE
  exposed-modules: Language.Haskell.Exference.Core
                   Language.Haskell.Exference.Core.Types
                   Language.Haskell.Exference.Core.TypeUtils
                   Language.Haskell.Exference.Core.ExferenceStats
                   Language.Haskell.Exference.Core.Expression
                   Language.Haskell.Exference.Core.FunctionBinding
                   Language.Haskell.Exference.Core.SearchTree
  exposed-modules: Language.Haskell.Exference
                   Language.Haskell.Exference.SimpleDict
                   Language.Haskell.Exference.ExpressionToHaskellSrc
                   Language.Haskell.Exference.TypeFromHaskellSrc
                   Language.Haskell.Exference.BindingsFromHaskellSrc
                   Language.Haskell.Exference.ClassEnvFromHaskellSrc
                   Language.Haskell.Exference.EnvironmentParser
                   Language.Haskell.Exference.FunctionDecl
                   Paths_exference
                   Flags_exference
  other-modules:   Language.Haskell.Exference.Core.Internal.Unify,
                   Language.Haskell.Exference.Core.Internal.ConstraintSolver,
                   Language.Haskell.Exference.Core.Internal.ExferenceNode,
                   Language.Haskell.Exference.Core.Internal.ExferenceNodeBuilder,
                   Language.Haskell.Exference.Core.Internal.Exference
  extensions:      NoMonomorphismRestriction
                   CPP
                   FlexibleContexts
                   ScopedTypeVariables
                   DeriveDataTypeable
  hs-source-dirs: src
  Build-Depends:
    base >=3 && <5,
    containers,
    pretty >= 1.1,
    deepseq-generics,
    unordered-containers >= 0.2.5 && < 0.3,
    hashable,
    pqueue,
    list-t >= 0.2.3 && < 0.3,
    mmorph >= 1.0.4 && < 1.1,
    mtl-c,
    transformers,
    mtl,
    vector,
    either,
    haskell-src-exts,
    deepseq,
    hood,
    process,
    parsec,
    directory,
    multistate >= 0.6.2


Executable exference
  if flag(build-executables) {
    buildable: True
    build-depends:
      exference,
      base >=3 && <5,
      containers,
      transformers,
      mtl,
      list-t,
      haskell-src-exts,
      data-pprint >= 0.2.4,
      deepseq,
      hood,
      process,
      either,
      multistate >= 0.6.2
  } else {
    buildable: False
  }
  other-modules: Main
                 MainConfig
                 MainTest
  main-is: Main.hs
  hs-source-dirs: src-exference
  ghc-options: -rtsopts
               -O2
               -j
               -Wall
               -Werror
               -fno-warn-unused-imports
               -fno-warn-orphans
               -threaded
               -fno-spec-constr
               -auto-all
               -caf-all
               -- -fllvm
  If flag(buildSearchTree) {
    ghc-options:
               -with-rtsopts "-H4G -M6G -N"
  } else {
    ghc-options:
               -with-rtsopts "-H2G -M4G -N"

  }


  extensions: NoMonomorphismRestriction
              FlexibleContexts
              ScopedTypeVariables
