Name:          infression
Version:       0.1
Cabal-Version: >= 1.8
Build-Type:    Simple

Library
  --ghc-options: -fllvm
  ghc-options: -Wall
               -threaded
               -auto-all -caf-all -fno-spec-constr
               -rtsopts
               -O1
               -j
               -fno-warn-unused-imports
               -fno-warn-orphans
  exposed-modules: Infression,
                   Type,
                   ConstrainedType,
                   TypeClasses,
                   KnownDict,
                   InfressionStats
  other-modules: Unify,
                 ConstraintSolver,
                 InfressionState,
                 Expression
  extensions: NoMonomorphismRestriction
  hs-source-dirs: .
  Build-Depends:
    base >=3 && <5,
    containers,
    pretty >= 1.1,
    deepseq,
    vector,
    mtl,
    hood,
    stable-memo,
    parsec,
    pqueue

Executable test-main
  -- buildable: False
  main-is: Main.hs
  hs-source-dirs: .
  ghc-options: -Wall
               -threaded
               -auto-all -caf-all -fno-spec-constr
               -rtsopts
               -O1
               -j
               -fno-warn-unused-imports
               -fno-warn-orphans
  extensions: NoMonomorphismRestriction
  Build-Depends:
    base >=3 && <5,
    containers,
    pretty >= 1.1,
    deepseq,
    vector,
    mtl,
    hood,
    stable-memo,
    parsec,
    pqueue,
    process
