Name:          exference-core
Version:       1.1.2.2
Cabal-Version: >= 1.8
Build-Type:    Simple

Flag linkNodes
  description: nodes keep a reference to the precessor node, allowing returning
               the path thad lead to a solution.
  default: False

Flag buildSearchTree
  description: use dirty hacks to create the search tree that can be observed
               afterwards. needs link-nodes flag.
  default: False

Library
  --ghc-options: -fllvm
  ghc-options: -threaded
               -auto-all -caf-all -fno-spec-constr
               -rtsopts
               -O1
               -j
               -Wall
               -Werror
               -fno-warn-unused-imports
               -fno-warn-orphans
  
  If flag(linkNodes) || flag(buildSearchTree)
    cpp-options: -DLINK_NODES
  If flag(buildSearchTree)
    cpp-options: -DBUILD_SEARCH_TREE

  exposed-modules: Language.Haskell.Exference.Core
                   Language.Haskell.Exference.Core.Types
                   Language.Haskell.Exference.Core.TypeUtils
                   Language.Haskell.Exference.Core.ExferenceStats
                   Language.Haskell.Exference.Core.Expression
                   Language.Haskell.Exference.Core.FunctionBinding
                   Language.Haskell.Exference.Core.SearchTree
                   Paths_exference_core
                   Flags_exference_core
  other-modules:   Language.Haskell.Exference.Core.Internal.Unify,
                   Language.Haskell.Exference.Core.Internal.ConstraintSolver,
                   Language.Haskell.Exference.Core.Internal.ExferenceNode,
                   Language.Haskell.Exference.Core.Internal.ExferenceNodeBuilder,
                   Language.Haskell.Exference.Core.Internal.Exference
  extensions: NoMonomorphismRestriction CPP
  hs-source-dirs: src
  Build-Depends:
    base >=3 && <5,
    containers,
    pretty >= 1.1,
    deepseq-generics,
    vector,
    mtl,
    hood,
    stable-memo,
    unordered-containers >= 0.2.5 && < 0.3,
    hashable,
    parsec,
    pqueue,
    list-t >= 0.2.3 && < 0.3,
    mmorph >= 1.0.4 && < 1.1,
    mtl-c
